--- a/public/index.html
+++ b/public/index.html
@@ -12,30 +12,8 @@
 <body>
   <canvas id="stars"></canvas>
 
-  <header class="site-header">
-    <div class="brand">
-      <div class="logo">🪐</div>
-      <div>
-        <h1>PacMac Prophecy Watch</h1>
-        <p class="tag">Current events with scripture references — space vibes intact.</p>
-      </div>
-    </div>
-    <div class="controls">
-      <input id="search" class="input" placeholder="Search headlines..." />
-      <select id="topicFilter" class="select"></select>
-      <button id="refresh" class="button">Refresh</button>
-    </div>
-  </header>
+  <div id="root"></div>
 
-  <main id="app" class="grid"></main>
-
-  <footer class="site-footer">
-    <p>
-      Scripture text from KJV (public domain). Feeds: Reuters, AP, BBC, Al Jazeera, NASA.
-      This site surfaces possible correlations; do your own Berean‑level study (Acts 17:11).
-    </p>
-  </footer>
-
-  <script src="/app.js"></script>
+  <script src="/dist/bundle.js"></script>
 </body>
 </html>
